# bls12-381-hash

./: BENCHMARKS.md  Cargo.toml  LICENSE  README.md
.cargo/: config.toml
bench/: Cargo.toml
bench/tests/: bench.rs  modexp_cost.rs  subgroup_probe.rs
lib/: Cargo.toml
lib/src/: consts_g1.rs  consts_g2.rs  fp.rs  fp2.rs  g1.rs  g1_svdw.rs  g2.rs  g2_svdw.rs  lib.rs  macros.rs  probe.rs
program/: Cargo.toml
program/src/: g1_consts.rs  g1_msig.rs  g1_svdw.rs  g2_consts.rs  g2_msig.rs  g2_svdw.rs  lib.rs
tools/: check_divsteps.py  experiment_divsteps60.py  gen_ps30.py
