[package]
name = "bls381-hash"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Witness-assisted RFC 9380 hash-to-curve for BLS12-381 on Solana SBF"

[lib]
name = "bls381_hash"

[dependencies]
solana-program-error = "3.0.1"
solana-sha256-hasher = "3.1.0"
solana-define-syscall = "4.0.1"

[features]
default = ["ro"]
ro = ["g1-ro", "g2-ro"]
g1-ro = []
g2-ro = []
g1-nu = []
g2-nu = []
modexp = []
# 674 byte G2 blob: two direct tv2 inverse witnesses instead of one pair
# inversion, 96 more bytes for about 14k less CU
wide-witness = []
full = ["g1-ro", "g2-ro", "g1-nu", "g2-nu", "modexp"]
